Basic contact form

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,8 +8,9 @@
     </head>
     <body>
         <div>
-          Microblog:
+          Navigation:
           <a href="/index">Home</a>
+          <a href="/contact">Contact</a>
         </div>
         <hr>
         {% block content %}{% endblock %}
